# mud-slop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
configs/: README.md  aardwolf.yml  default.yml
profiles/: README.md
src/mud_client/: __main__.py  ansi.py  app.py  cli.py  config.py  connection.py  conversation.py  debug_log.py  help.py  info.py  input_buffer.py  map.py  telnet.py  types.py  ui.py
src/mud_slop/: __init__.py  __main__.py  ansi.py  app.py  cli.py  config.py  connection.py  constants.py  conversation.py  debug_log.py  gmcp.py  help.py  history.py  info.py  input_buffer.py  map.py  menu.py  telnet.py  ui.py
src/mud_slop/configs/: aardwolf.yml  default.yml
tests/: test_config.py  test_conversation.py  test_help.py  test_input_buffer.py  test_map.py  test_menu.py  test_panel.py
