[project]
name = "mud-slop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mud-slop = "mud_slop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mud_slop"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
