[project]
name = "mud-slop"
version = "0.1.7"
description = "A terminal-based MUD client with GMCP support, ANSI colors, and protocol inspection"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "mrosata" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
    "Topic :: Terminals",
]
keywords = ["mud", "client", "telnet", "gmcp", "curses", "terminal"]
dependencies = []

[project.urls]
Homepage = "https://github.com/mrosata/mud-slop"
Repository = "https://github.com/mrosata/mud-slop"
Issues = "https://github.com/mrosata/mud-slop/issues"

[project.scripts]
mud-slop = "mud_slop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mud_slop"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
